<resources>
    <string name="app_name">ePharmaAssignment</string>
    <string name="delete">delete</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter Title</string>
    <string name="enter_description">Enter Content</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_price">Enter Price</string>
    <string name="pleaseEnterName">Please enter name</string>
    <string name="pleaseEnterDescription">Please enter description</string>
    <string name="pleaseEnterQuantity">Please enter quantity</string>
    <string name="pleaseEnterPrice">Please enter price</string>
    <string name="viewOrEditMedicine">View/Edit Medicine</string>
    <string name="createMedicine">Create Medicine</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
</resources>
